# driftproof-emg

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md  backlog.md  data_schema.md  decision_log.md  experiment_manifests.md  experiment_plan.md  glossary.md  hardware.md  index.md  pilot_protocol.md  requirements.md  roadmap.md
docs/design/: adaptation_strategy.md  baseline_models.md  drift_detection.md  hardware_interface.md  preprocessing_features.md  streaming_protocol.md  system_overview.md  virtual_gripper.md
driftproof/: __init__.py  cli.py  types.py
driftproof/acquisition/: __init__.py  capture.py  replay.py  simulated.py
driftproof/adaptation/: __init__.py  experiment.py  normalization.py
driftproof/control/: __init__.py  virtual_gripper.py
driftproof/drift/: calibration.py  mahalanobis.py
driftproof/evaluation/: metrics.py  reporting.py
driftproof/experiments/: __init__.py  manifest.py
driftproof/features/: classical.py
driftproof/preprocessing/: windowing.py
driftproof/protocols/: __init__.py  trials.py
examples/: demo_experiment.json
tests/: test_adaptation_experiment.py  test_capture.py  test_drift_calibration.py  test_io.py  test_manifest.py  test_reporting.py  test_synthetic_pipeline.py  test_trial_protocols.py  test_virtual_gripper.py
